--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
   <script type="module" src="js/renderiza.js"></script>
   <script type="module" src="js/sincroniza.js"></script>
   <script type="module" src="js/esperaUnPocoYSincroniza.js"></script>
+
+  <link rel="stylesheet" href="css/dark-hc.css">
+  <link rel="stylesheet" href="css/dark-mc.css">
+  <link rel="stylesheet" href="css/dark.css">
+  <link rel="stylesheet" href="css/light-hc.css">
+  <link rel="stylesheet" href="css/light-mc.css">
+  <link rel="stylesheet" href="css/light.css">
 </head>
 
   <md-top-app-bar adicional="tab" headline="headline">
